# Godot's own sources
set(SERVER_SOURCES
arvr/arvr_interface.cpp
arvr/arvr_interface.h
arvr/arvr_positional_tracker.cpp
arvr/arvr_positional_tracker.h
arvr/arvr_enum_casters.h
arvr_server.cpp
arvr_server.h

audio/audio_driver_dummy.cpp
audio/audio_driver_dummy.h
audio/audio_effect.cpp
audio/audio_effect.h
audio/audio_filter_sw.cpp
audio/audio_filter_sw.h
audio/audio_rb_resampler.cpp
audio/audio_rb_resampler.h
audio/audio_stream.cpp
audio/audio_stream.h
audio/effects/audio_effect_amplify.cpp
audio/effects/audio_effect_amplify.h
audio/effects/audio_effect_chorus.cpp
audio/effects/audio_effect_chorus.h
audio/effects/audio_effect_compressor.cpp
audio/effects/audio_effect_compressor.h
audio/effects/audio_effect_delay.cpp
audio/effects/audio_effect_delay.h
audio/effects/audio_effect_distortion.cpp
audio/effects/audio_effect_distortion.h
audio/effects/audio_effect_eq.cpp
audio/effects/audio_effect_eq.h
audio/effects/audio_effect_filter.cpp
audio/effects/audio_effect_filter.h
audio/effects/audio_effect_limiter.cpp
audio/effects/audio_effect_limiter.h
audio/effects/audio_effect_panner.cpp
audio/effects/audio_effect_panner.h
audio/effects/audio_effect_phaser.cpp
audio/effects/audio_effect_phaser.h
audio/effects/audio_effect_pitch_shift.cpp
audio/effects/audio_effect_pitch_shift.h
audio/effects/audio_effect_record.cpp
audio/effects/audio_effect_record.h
audio/effects/audio_effect_reverb.cpp
audio/effects/audio_effect_reverb.h
audio/effects/audio_effect_spectrum_analyzer.cpp
audio/effects/audio_effect_spectrum_analyzer.h
audio/effects/audio_effect_stereo_enhance.cpp
audio/effects/audio_effect_stereo_enhance.h
audio/effects/audio_stream_generator.cpp
audio/effects/audio_stream_generator.h
audio/effects/eq.cpp
audio/effects/eq.h
audio/effects/reverb.cpp
audio/effects/reverb.h
audio/reverb_sw.cpp
audio/reverb_sw.h
audio/voice_rb_sw.h
audio_server.cpp
audio_server.h
camera/camera_feed.cpp
camera/camera_feed.h
camera_server.cpp
camera_server.h
camera_server_enum_casters.h
physics/area_pair_sw.cpp
physics/area_pair_sw.h
physics/area_sw.cpp
physics/area_sw.h
physics/body_pair_sw.cpp
physics/body_pair_sw.h
physics/body_sw.cpp
physics/body_sw.h
physics/broad_phase_basic.cpp
physics/broad_phase_basic.h
physics/broad_phase_octree.cpp
physics/broad_phase_octree.h
physics/broad_phase_sw.cpp
physics/broad_phase_sw.h
physics/collision_object_sw.cpp
physics/collision_object_sw.h
physics/collision_solver_sat.cpp
physics/collision_solver_sat.h
physics/collision_solver_sw.cpp
physics/collision_solver_sw.h
physics/constraint_sw.h
physics/gjk_epa.cpp
physics/gjk_epa.h
physics/joints/cone_twist_joint_sw.cpp
physics/joints/cone_twist_joint_sw.h
physics/joints/generic_6dof_joint_sw.cpp
physics/joints/generic_6dof_joint_sw.h
physics/joints/hinge_joint_sw.cpp
physics/joints/hinge_joint_sw.h
physics/joints/jacobian_entry_sw.h
physics/joints/pin_joint_sw.cpp
physics/joints/pin_joint_sw.h
physics/joints/slider_joint_sw.cpp
physics/joints/slider_joint_sw.h
physics/joints_sw.h
physics/physics_server_sw.cpp
physics/physics_server_sw.h
physics/shape_sw.cpp
physics/shape_sw.h
physics/space_sw.cpp
physics/space_sw.h
physics/step_sw.cpp
physics/step_sw.h
physics_2d/area_2d_sw.cpp
physics_2d/area_2d_sw.h
physics_2d/area_pair_2d_sw.cpp
physics_2d/area_pair_2d_sw.h
physics_2d/body_2d_sw.cpp
physics_2d/body_2d_sw.h
physics_2d/body_pair_2d_sw.cpp
physics_2d/body_pair_2d_sw.h
physics_2d/broad_phase_2d_basic.cpp
physics_2d/broad_phase_2d_basic.h
physics_2d/broad_phase_2d_hash_grid.cpp
physics_2d/broad_phase_2d_hash_grid.h
physics_2d/broad_phase_2d_sw.cpp
physics_2d/broad_phase_2d_sw.h
physics_2d/collision_object_2d_sw.cpp
physics_2d/collision_object_2d_sw.h
physics_2d/collision_solver_2d_sat.cpp
physics_2d/collision_solver_2d_sat.h
physics_2d/collision_solver_2d_sw.cpp
physics_2d/collision_solver_2d_sw.h
physics_2d/constraint_2d_sw.h
physics_2d/joints_2d_sw.cpp
physics_2d/joints_2d_sw.h
physics_2d/physics_2d_server_sw.cpp
physics_2d/physics_2d_server_sw.h
physics_2d/physics_2d_server_wrap_mt.cpp
physics_2d/physics_2d_server_wrap_mt.h
physics_2d/shape_2d_sw.cpp
physics_2d/shape_2d_sw.h
physics_2d/sources.cmake
physics_2d/space_2d_sw.cpp
physics_2d/space_2d_sw.h
physics_2d/step_2d_sw.cpp
physics_2d/step_2d_sw.h
physics_2d_server.cpp
physics_2d_server.h
physics_server.cpp
physics_server.h
register_server_types.cpp
register_server_types.h
server_wrap_mt_common.h
visual/CMakeLists.txt
visual/SCsub
visual/rasterizer.cpp
visual/rasterizer.h
visual/shader_language.cpp
visual/shader_language.h
visual/shader_types.cpp
visual/shader_types.h
visual/sources.cmake
visual/visual_server_canvas.cpp
visual/visual_server_canvas.h
visual/visual_server_globals.cpp
visual/visual_server_globals.h
visual/visual_server_light_baker.cpp
visual/visual_server_light_baker.h
visual/visual_server_raster.cpp
visual/visual_server_raster.h
visual/visual_server_scene.cpp
visual/visual_server_scene.h
visual/visual_server_viewport.cpp
visual/visual_server_viewport.h
visual/visual_server_wrap_mt.cpp
visual/visual_server_wrap_mt.h
visual_server.cpp
visual_server.h
visual_server_enum_casters.h
visual_server_enums.h
)
foreach(tgt ${global_targets})
    target_sources(${tgt}_engine PRIVATE
        ${SERVER_SOURCES}
        "${PROJECT_SOURCE_DIR}/thirdparty/misc/easing_equations.cpp"
        "${PROJECT_SOURCE_DIR}/thirdparty/misc/mikktspace.c"
    )
endforeach()
source_group(TREE ${PROJECT_SOURCE_DIR} FILES ${source_files} ${header_files})
INSTALL (
    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DESTINATION include/SegsEngine
    FILES_MATCHING PATTERN "*.h"
)
